samples/_failures_safe/1761620660_1b2d13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b40a5e6.c: In function ‘main’:
./samples/SAFE/__tmp_9b40a5e6.c:170:5: error: expected expression at end of input
  170 |     free_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_9b40a5e6.c:170:5: error: expected declaration or statement at end of input
